n8n/service-n8n.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  labels:
    app: n8n
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
      name: http
  selector:
    app: n8n
  type: ClusterIP
