n8n/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-postgres
spec:
  clusterIP: None
  selector:
    app: n8n-postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
