n8n/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-public
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: n8n
  hostnames:
  - n8n.bennaylor.dev
  rules:
  # Oauth for all things
  - matches:
    - path:
        type: PathPrefix
        value: /oauth2
    backendRefs:
    - group: ""
      kind: Service
      name: oauth2-proxy
      namespace: oauth2-proxy
      port: 80
      weight: 1
  # webhooks
  - matches:
    - path:
        type: PathPrefix
        value: /webhook-test/
    - path:
        type: PathPrefix
        value: /webhook/
    backendRefs:
    - group: ""
      kind: Service
      name: n8n
      port: 8080
      weight: 1
  # n8n
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: n8n
      port: 8080
      weight: 1
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: oauth-chain
